# llm-drone-safety-filter

./: .gitignore  README.md  requirements-calibration.txt  requirements-dev.txt  requirements-ovd.txt
data/: README.md  T1.md  T2.md  T3.md  T4.md  htraj.csv  latency.csv  per_trial.csv
docker/: Dockerfile  README.md  entrypoint.sh  run.sh
eval/: README.md
eval/baselines/: conftest.py  package.xml  setup.cfg  setup.py
eval/baselines/eval_baselines/: __init__.py  b0_passthrough.py  b1a_static_rmin.py  b1b_static_rmax.py  b2_modulated.py  b3_context_aug.py  b4_full_loop.py  schemas.py
eval/baselines/launch/: b0_passthrough.launch.py  b1a_static_rmin.launch.py  b1b_static_rmax.launch.py  b2_modulated.launch.py  b3_context_aug.launch.py  b4_full_loop.launch.py
eval/baselines/test/: test_b0_passthrough.py  test_b1a_static_rmin.py  test_b1b_static_rmax.py  test_b2_modulated.py  test_b3_context_aug.py  test_b4_full_loop.py  test_schemas.py
eval/faults/: conftest.py  package.xml  setup.cfg  setup.py
eval/faults/eval_faults/: __init__.py  adversarial.py  attribute_mismatch.py  cognitive_lapse.py  detection_bridge.py  fault_scenario.py  hallucination.py  injector_helpers.py  injector_node.py  schemas.py
eval/faults/launch/: injector.launch.py
eval/faults/scenarios/: adversarial_geofence.yaml  attribute_mismatch_label_low.yaml  cognitive_lapse_self_correction.yaml  hallucination_target_swap_dangerous.yaml  none_baseline.yaml
eval/faults/scenarios/track_b/: hallucination_position_geofence_out_direct.yaml  hallucination_position_worst_user_direct.yaml
eval/faults/test/: test_adversarial.py  test_attribute_mismatch.py  test_cognitive_lapse.py  test_detection_bridge.py  test_fault_scenario.py  test_hallucination.py  test_injector_helpers.py  test_schemas.py
eval/runner/: conftest.py  package.xml  setup.cfg  setup.py
eval/runner/eval_runner/: __init__.py  ablation_invariant.py  bag_integrity.py  bag_pipeline.py  bag_reader.py  grid.py  launch_composition.py  launch_description.py  metrics_aggregator.py  panel.py  run_one.py  runner.py  schemas.py  seed_policy.py  task_success_geom.py  trial_meta.py
eval/runner/test/: test_ablation_invariant.py  test_bag_integrity.py  test_bag_pipeline.py  test_bag_reader.py  test_grid.py  test_launch_composition.py  test_launch_description.py  test_metrics_aggregator.py  test_panel.py  test_run_one.py  test_runner.py  test_schemas.py  test_seed_policy.py  test_task_success_geom.py  test_trial_meta.py
intent/: README.md
intent/confidence/: README.md  conftest.py  package.xml  setup.cfg  setup.py
intent/confidence/intent_confidence/: estimator.py  estimator_node.py  grounding.py  live_signals.py  publisher_node.py  signal_scenario.py
intent/confidence/launch/: confidence_player.launch.py  estimator.launch.py
intent/confidence/scenarios/: c_constant_0.yaml  c_constant_1.yaml  c_constant_mid.yaml  c_ramp_down.yaml  c_stall.yaml  c_step_down.yaml  signals_high_confidence.yaml  signals_low_confidence.yaml  signals_s1_absent.yaml  signals_s1_drop.yaml  signals_step_down.yaml
intent/confidence/test/: test_estimator.py  test_estimator_node.py  test_grounding.py  test_live_signals.py
intent/context/: package.xml  setup.cfg  setup.py
intent/context/intent_context/: context_graph.py  context_graph_publisher.py
intent/context/test/: conftest.py  test_context_graph.py
intent/ovd/: README.md  package.xml  setup.cfg  setup.py
intent/ovd/intent_ovd/: __init__.py  detector.py  detector_node.py  vocabulary.py
intent/ovd/launch/: ovd_detector.launch.py
intent/ovd/test/: conftest.py  test_detector.py  test_vocabulary.py
intent/sigma_bridge/: conftest.py  package.xml  setup.cfg  setup.py
intent/sigma_bridge/intent_sigma_bridge/: sigma_bridge_helpers.py  sigma_bridge_node.py
intent/sigma_bridge/launch/: sigma_bridge.launch.py
intent/sigma_bridge/test/: test_sigma_bridge_helpers.py
safety/: README.md
safety/tier1/: package.xml  setup.cfg  setup.py
safety/tier1/launch/: tier1_b0.launch.py  tier1_b1.launch.py  tier1_b1_max.launch.py  tier1_b2.launch.py
safety/tier1/test/: conftest.py  test_cbf_qp.py  test_confidence_guard.py  test_cross_launch_sanity.py  test_scenario_layout.py
safety/tier1/tier1_filter/: cbf_qp.py  confidence_guard.py  filter_node.py  scenario_layout.py
safety/tier2_gate/: package.xml  setup.cfg  setup.py
safety/tier2_gate/launch/: sim_integration.launch.py  tier2_gate.launch.py
safety/tier2_gate/test/: test_catalog.py  test_contradicts.py  test_control.py  test_frames.py  test_gate.py  test_integration.py  test_sdf_targets.py  test_select_confidence.py  test_specs.py  test_state.py  test_thresholds.py
safety/tier2_gate/tier2_gate/: _control.py  _frames.py  _geom.py  catalog.py  contradicts.py  dispatch_to_tier1_node.py  gate.py  gate_node.py  px4_adapter_node.py  sdf_targets.py  specs.py  state.py  thresholds.py
scripts/: README.md  analyze_bag_confidence.py  bench_cbf_qp.py  build_microxrce_agent_macos.sh  build_mug.py  build_yard_people.py  c33_accuracy_bench.py  c33_backend_smoke.sh  c33_bench_utterances.yaml  c37_grounding_verify.py  check_f_smoke.sh  check_g1_smoke.sh  (+38 more)
sim/g1_offboard/: README.md  package.xml  setup.cfg  setup.py
sim/g1_offboard/g1_offboard/: frame_conversions.py  offboard_control_node.py  px4_clock_bridge_node.py
sim/g1_offboard/launch/: g1_offboard.launch.py
sim/g1_offboard/test/: test_frame_conversions.py
sim/sim_user_marker/: README.md  package.xml  setup.cfg  setup.py
sim/sim_user_marker/launch/: e2_sim_bridge.launch.py
sim/sim_user_marker/sim_user_marker/: user_marker_node.py
sim/teleop_keyboard/: README.md  package.xml  setup.py
sim/teleop_keyboard/launch/: teleop_keyboard.launch.py
sim/teleop_keyboard/teleop_keyboard/: keymap.py  teleop_keyboard_node.py
sim/teleop_keyboard/test/: test_keymap.py
sim/waypoint_follower/: package.xml  setup.py
sim/waypoint_follower/launch/: follower.launch.py
sim/waypoint_follower/test/: conftest.py  test_waypoint_velocity.py
sim/waypoint_follower/waypoint_follower/: follower_node.py  waypoint_velocity.py
(+118 files in other folders)
