<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eval_baselines</name>
  <version>0.0.1</version>
  <description>
    paper §C 5-way ablation baselines — B0 passthrough · B1 static · B2 modulated ·
    B3 context-augmented · B4 full loop. 각 baseline 의 *trial-level 오케스트레이션*
    잠금 (tier1_filter 측 모드 선택 + intent layer 구성 + Tier 2 게이트 활성화).
    ADR-0025 D3 (격자) + D5 (12 PR 시안 B7) 정합. 본 PR (B7 #7) scope =
    schemas + b0_passthrough.py + 단위 테스트만.
  </description>
  <maintainer email="elecage@users.noreply.github.com">LLM_Drone project</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>tier1_filter</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
