<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eval_faults</name>
  <version>0.0.1</version>
  <description>
    paper §C fault injection — 4 channel (hallucination / adversarial /
    cognitive_lapse / attribute_mismatch) ROS 2 injector_node + pure helpers.
    fault_scenario YAML 측 trial 정의 load → channel 별 apply_* dispatch →
    transformed σ / prompt / utterance / detection republish. ADR-0025 D5
    12 PR 시안의 #5 단계.
  </description>
  <maintainer email="elecage@users.noreply.github.com">LLM_Drone project</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>python3-yaml</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
