<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>intent_confidence</name>
  <version>0.0.1</version>
  <description>
    Mock *의도해석기* — 신뢰도 채널만 시뮬레이트. YAML 시나리오 segment (constant /
    ramp / step) 기반으로 /intent/grounding_confidence (std_msgs/Float32, c ∈ [0,1])
    publish. Phase 2b B2 검증용 + 추후 LLM/VLA 백본 swap 시 인터페이스 호환 reference.
    ADR-0005 D3 (intent-agnostic) 정합.
  </description>
  <maintainer email="elecage@users.noreply.github.com">LLM_Drone project</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>python3-yaml</depend>
  <!-- OVD 어휘 동의어 단일 소스 (scene.OVD_CLASS_SYNONYMS) — grounding s1 매칭. -->
  <depend>scenario_params</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
