<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>intent_context</name>
  <version>0.0.1</version>
  <description>
    Context augmentation — 시나리오 정적 장면(known_objects + 좌표 + 사용자 위치)을
    /intent/context_graph (std_msgs/String JSON) 로 발행. B3/B4 baseline 의 fusion
    mode wrapper_node 입력. 데이터 단일 진실 소스 = scenario_params (ADR-0026 D3
    ground-truth perception 정합).
  </description>
  <maintainer email="elecage@users.noreply.github.com">LLM_Drone project</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>scenario_params</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
