<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>intent_sigma_bridge</name>
  <version>0.0.1</version>
  <description>
    의도-제어 변환 모듈 (ADR-0028·ADR-0029 D-A1) — *의도해석기* 출력 σ
    (/intent/llm_sigma_raw, {sigma,theta,c} JSON) 를 드론 목표 지점
    (/intent/target_waypoint, geometry_msgs/PoseStamped ENU) 으로 변환.
    target_id → 장면 world 좌표 결정론 lookup (작은 모델 좌표 환각 제거,
    ADR-0027). 운용 가드(Track A)는 파라미터로 off 가능 — 본실험 live 경로는
    tier1 r_max 가 단일 안전 책임 (ADR-0028 Track B). 하류 = waypoint_follower →
    tier1 연속 속도 CBF.
  </description>
  <maintainer email="elecage@users.noreply.github.com">LLM_Drone project</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>scenario_params</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
