<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>g1_offboard</name>
  <version>0.0.1</version>
  <description>
    G1 minimum offboard control node — PX4 SITL을 arm + OFFBOARD 모드로 진입시키고,
    ENU velocity nominal 토픽(/cmd/trajectory_setpoint_safe)을 PX4 TrajectorySetpoint
    (NED)로 변환·publish한다. paper-1 baseline B0/B1/B2 비교 인프라.
    인터페이스 4결정은 ADR-0011 참조.
  </description>
  <maintainer email="elecage@users.noreply.github.com">LLM_Drone project</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>rosgraph_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
