<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sim_user_marker</name>
  <version>0.0.1</version>
  <description>
    사용자 위치 TF(world → user) + 사용자 회피 영역 RViz 마커(반경 r_min)를
    공급하는 단일 노드 패키지. paper-1의 안전 계층 시각화·평가용.
    좌표는 ROS 2 파라미터로 노출되며 1차 기본값은 S6 §2.3·§2.4를 따른다.
  </description>
  <maintainer email="elecage@users.noreply.github.com">LLM_Drone project</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>scenario_params</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
